--- a/PetTracking/app/build.gradle
+++ b/PetTracking/app/build.gradle
@@ -36,4 +36,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.compose.material:material:1.0.0-alpha12"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
