--- a/PetTracking/app/build.gradle
+++ b/PetTracking/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation"com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
