--- a/PetTracking/app/src/main/AndroidManifest.xml
+++ b/PetTracking/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PetTracking">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".SignUpActivity">
+        <activity android:name=".Activity.SignUpActivity"></activity>
+        <activity android:name=".Activity.MainActivity" />
+        <activity android:name=".Activity.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
