--- a/PetTracking/app/src/main/AndroidManifest.xml
+++ b/PetTracking/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PetTracking">
         <activity android:name=".Activity.SignUpActivity"></activity>
-        <activity android:name=".Activity.MainActivity" />
-        <activity android:name=".Activity.SignInActivity">
+        <activity android:name=".Activity.SignInActivity" />
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
