--- a/PetTracking/app/build.gradle
+++ b/PetTracking/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup:android-times-square:1.6.5@aar'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
+
+
 
 
 }
